# tap-woocommerce

./: .gitignore  pyproject.toml  tox.ini
.github/workflows/: tox.yml
tap_woocommerce/: __init__.py  client.py  streams.py  tap.py  test.py
tap_woocommerce/tests/: test_core.py  utils.py
