[tool.poetry]
name = "tap-woocommerce"
version = "0.0.24"
description = "`tap-woocommerce` is a Singer tap for WooCommerce, built with the Meltano SDK for Singer Taps."
authors = ["hotglue"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = ">=3.8.1,<3.11"
requests = "^2.25.1"
singer-sdk = "^0.38.0"
random-user-agent = "^1.0.1"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
tox = "^4.23.2"
pytest = ">=7.0"
black = "23.1.0"
flake8 = "6.0.0"
pydocstyle = "6.1.1"
mypy = "1.5.1"
boto3 = "^1.35.58"

[build-system]
requires = ["poetry-core==1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-woocommerce = 'tap_woocommerce.tap:TapWooCommerce.cli'
